--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,6 +35,7 @@ test_script:
 - cmd.exe /C AppVeyorTest.bat
 deploy:
   tag: $(APPVEYOR_REPO_TAG_NAME)
+  force_update: true
   description: 'Automated release'
   provider: GitHub
   auth_token:
